<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.moia</groupId>
    <artifactId>matsim-slack</artifactId>
    <version>2027.0-SNAPSHOT</version>

    <name>MATSim Slack Integration</name>
    <description>Real-time Slack notifications and interactive control for MATSim simulations</description>
    <url>https://github.com/moia-oss/matsim-slack</url>

    <licenses>
        <license>
            <name>GNU General Public License, Version 2</name>
            <url>https://www.gnu.org/licenses/old-licenses/gpl-2.0.html</url>
        </license>
    </licenses>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <matsim.version>2027.0-PR4909</matsim.version>
        <slack.sdk.version>1.45.3</slack.sdk.version>
        <junit.version>5.10.1</junit.version>
    </properties>

    <repositories>
        <repository>
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Slack SDK -->
        <dependency>
            <groupId>com.slack.api</groupId>
            <artifactId>slack-api-client</artifactId>
            <version>${slack.sdk.version}</version>
        </dependency>
        <dependency>
            <groupId>com.slack.api</groupId>
            <artifactId>bolt-socket-mode</artifactId>
            <version>${slack.sdk.version}</version>
        </dependency>

        <!-- WebSocket runtime -->
        <dependency>
            <groupId>javax.websocket</groupId>
            <artifactId>javax.websocket-api</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.tyrus.bundles</groupId>
            <artifactId>tyrus-standalone-client</artifactId>
            <version>1.20</version>
        </dependency>

        <!-- MATSim -->
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>drt</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>dvrp</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.36</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim-examples</artifactId>
            <version>${matsim.version}</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
            </plugin>
        </plugins>
    </build>
</project>
